# benchmark

./: CMakeLists.txt  benchmark.cpp  bswap.cpp
bswap/: generate.sh  test.rs
